@@ -25,6 +25,7 @@
     from a previous subscription.
 20. Apply 'Single Tracks' tweak to play queue items.
 21. Parse more fields from CUE files.
+22. Fix image requests when using composers.
 
 2.3.3
 -----
